--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
@@ -20,20 +20,20 @@ div>label{
   flex: 1 1 auto;
 }
 
-.weather-margin{
+.weather-margin {
   margin: 20px 10px;
 }
 
-.weather-info-margin{
+.weather-info-margin {
   margin-top: 10px;
   margin: 15px 2px;
 }
 
-.location-margin-padding{
+.location-margin-padding {
   margin-left: 20px;
 }
 
-.card-margin-padding{
+.card-margin-padding {
   margin-left: 12px;
   margin-right: 12px;
   margin-top: 18px;
@@ -41,7 +41,7 @@ div>label{
   padding: 6px;
 }
 
-.temperature-font{
+.temperature-font {
   font-size: larger;
   padding-left: 5px;
 }
@@ -51,22 +51,26 @@ div>label{
               0 1px 15px 0 rgba(172,172,172),
               0 1px 10px 0 rgba(172,172,172);
 }
-.today-margin{
+
+.today-margin {
   margin: 10px 2px;
 }
-.today-title{
+
+.today-title {
   font: 20;
   color: black;
   font-weight: bold;
 }
-.time-margin-padding{
+
+.time-margin-padding {
   margin-left: 10px;
   font-size: large;
 }
-.image-margin-padding{
+
+.image-margin-padding {
   margin-left: 130px;
 }
-.rain-padding
-{
+
+.rain-padding {
   margin: left 0;
 }
