--- a/liquid-prep-app/src/app/components/header-title/header-title.component.scss
+++ b/liquid-prep-app/src/app/components/header-title/header-title.component.scss
@@ -1,10 +1,10 @@
 .custom-toolbar {
-  background-color: #2F4FFE;
+  background-color: #EDF5FF;
   padding: 0 5px;
 }
 
 .toolbar-title {
-  color: #fff;
+  color: #262626;
   padding-left: 10%;
 }
 
@@ -16,4 +16,8 @@
   padding-left: 0;
   width: 100%;
   text-align: center;
+}
+
+.blue-icon {
+  color: #2F4FFE;
 }
