--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -11,19 +11,6 @@
 </div>
 
 <div *ngIf="!requestingCrop" class="add-crop" style="overflow-x:hidden;" fxFlexFill cdkScrollable>
-  <!-- <mat-toolbar class="add-crop-header mat-elevation-z4 custom-toolbar" [class.hidden]="toggleSearch">
-    <mat-toolbar-row style="padding: 0 5px;">
-      <button mat-icon-button class="toolbar-title" aria-label="Icon-button with close icon" (click)="backToMyCrops()">
-        <mat-icon>close</mat-icon>
-      </button>
-      <div style="padding:8px 0 0 10px; flex:1;">
-        <div class="mat-title toolbar-title button" style="margin-bottom:2px;">Add a new crop</div>
-      </div>
-      <button mat-icon-button class="toolbar-title" aria-label="Icon-button with search icon"  (click)="openSearch()">
-        <mat-icon>search</mat-icon>
-      </button>
-    </mat-toolbar-row>
-  </mat-toolbar> -->
 
   <mat-toolbar class="search-block mat-elevation-z4" [class.active]="toggleSearch">
     <mat-toolbar-row style="padding: 0 5px;">
@@ -37,8 +24,8 @@
     </mat-toolbar-row>
   </mat-toolbar>
 
-  <div *ngIf=cropsList>
-    <mat-grid-list class="grid" cols="2" rowHeight="1:1"    gutterSize="2px">
+  <div *ngIf=cropsList class="cropsList">
+    <mat-grid-list class="grid" cols="2" rowHeight="229" gutterSize="2px">
       <mat-grid-tile *ngFor="let crop of filterFunction()">
         <mat-card (click)="addCrop(crop)">
           <img mat-card-image class="cardImage" src="{{ crop.url }}" alt="{{ crop.cropName }}" />
