--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -50,8 +50,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .mat-toolbar {
-  background-color: #2F4FFE;
-  color: white;
+  background-color: #EDF5FF;
+  color: #262626;
 }
 
 .color-low{
