--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -1,4 +1,4 @@
-<app-header-title fxFlexFill  leftIconName="arrow_back" headerTitle="Test sensor" rightIconName="volume_up" (click)="onHeaderClick($event)">
+<app-header-title fxFlexFill (click)="onHeaderClick($event)">
 </app-header-title>
 <div class="add-crop" style="overflow-x:hidden;" fxFlexFill cdkScrollable>
 
