--- a/liquid-prep-app/src/app/components/past-readings/past-readings.component.html
+++ b/liquid-prep-app/src/app/components/past-readings/past-readings.component.html
@@ -1,8 +1,6 @@
-<!-- <app-header-title class="settings-header" fxFlexFill leftIconName="arrow_back" headerTitle="Past Readings" rightIconName="volume_up" (click)="onHeaderClick($event)">
-</app-header-title> -->
+<app-header-title class="settings-header" fxFlexFill (click)="onHeaderClick($event)">
+</app-header-title>
 
-<!-- <mat-calendar [(selected)]="selected"></mat-calendar> -->
-<!-- <mat-calendar [dateClass]="dateClass()" (selectedChange)="onSelect($event)"></mat-calendar> -->
 <mat-calendar [dateClass]="selectedDateHasReadingClass"></mat-calendar>
 
 <!--  START Reading Card -->
