--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -1,4 +1,15 @@
 
+<mat-toolbar class="custom-toolbar">
+  <button mat-icon-button class="blue-icon" aria-label="LeftButton" (click)="handleLeftClick()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  <span class="toolbar-title">Select a crop</span>
+  <span class="toolbar-spacer"></span>
+  <button mat-icon-button class="blue-icon" aria-label="RightButton">
+    <mat-icon>volume_up</mat-icon>
+  </button>
+</mat-toolbar>
+
 
 <div *ngIf="requestingCrop"
      fxFlexFill fxLayout="column"
