new dashboard implementaion with bottom nav bar

--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
@@ -74,3 +74,31 @@ div>label{
 .rain-padding {
   margin: left 0;
 }
+
+.toolbarNav {
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
+  //display: flex;
+  //justify-content: space-around;
+  padding: 2em;
+  background-color: #2f4ffe;
+
+  //-webkit-box-shadow: 3px 3px 5px 6px #ccc; /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  //-moz-box-shadow: 3px 3px 5px 6px #ccc; /* Firefox 3.5 - 3.6 */
+  //box-shadow: 2px 2px 4px 5px #ccc; /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+
+button:hover,
+.active-link {
+  color: white;
+}
+
+.btn-color {
+  background-color: #2f4ffe;
+  color: lightgrey;
+}
+
+.mat-icon {
+  margin-bottom: 4px;
+}
