--- a/liquid-prep-app/src/app/components/advice/advice.component.html
+++ b/liquid-prep-app/src/app/components/advice/advice.component.html
@@ -6,11 +6,11 @@
     <span class="mat-title" style="font-weight: bold">{{crop.cropName}}</span>
   </div>
   <div fxFlexFill fxLayout="row" fxLayoutAlign="space-between center">
-    <span>Planted Jul 4 </span>
+    <span>Planted {{seedingDate}} </span>
   </div>
   <div class="crop-status-container" fxFlexFill fxLayout="row" fxLayoutAlign="space-between center" >
     <button class="btn-crop-status" fxFlex="48" mat-stroked-button >12 Days Until Harvest</button>
-    <button class="btn-crop-status" fxFlex="48" mat-stroked-button *ngIf="false">Stage: Germinating</button>
+    <button class="btn-crop-status" fxFlex="48" mat-stroked-button >Stage: {{stage}}</button>
   </div>
   <img [src]="cropStatic.immaturePic" width="100%" height="100%" style="object-fit: cover;">
 </div>
@@ -30,7 +30,8 @@
   <mat-grid-tile colspan="1" rowspan="2" style="background-color: #e6f2fc">
     <div fxFlexFill fxLayout="column" fxLayoutAlign="start center">
       <span class="soil-moisture-water">Water Now</span>
-      <span class="soil-moisture-water-value">Yes</span>
+      <span class="soil-moisture-water-value" *ngIf="soilMoisturePercentage < 30">Yes</span>
+      <span class="soil-moisture-water-value" *ngIf="soilMoisturePercentage > 30">No</span>
     </div>
   </mat-grid-tile>
   <mat-grid-tile colspan="1" rowspan="4">
@@ -39,7 +40,7 @@
   <mat-grid-tile colspan="1" rowspan="2" style="background-color: #e6f2fc">
     <div fxFlexFill fxLayout="column" fxLayoutAlign="start center">
       <span class="soil-moisture-water">Amount</span>
-      <span class="soil-moisture-water-value">100 units</span>
+      <span class="soil-moisture-water-value">{{100 - soilMoisturePercentage}} units</span>
     </div>
   </mat-grid-tile>
   <mat-grid-tile colspan="3" rowspan="1">
