--- a/liquid-prep-app/src/app/components/header-title/header-title.component.html
+++ b/liquid-prep-app/src/app/components/header-title/header-title.component.html
@@ -4,6 +4,12 @@
   </button>
   <span class="toolbar-title">{{headerService.headerTitle}}</span>
   <span class="toolbar-spacer"></span>
+  <button ng-if="headerService.filterIconName" mat-icon-button class="blue-icon" aria-label="Filter" (click)="headerService.filterBtnClick()">
+    <mat-icon>{{headerService.filterIconName}}</mat-icon>
+  </button>
+  <button ng-if="headerService.sortIconName" mat-icon-button class="blue-icon" aria-label="Sort" (click)="headerService.sortBtnClick()">
+    <mat-icon>{{headerService.sortIconName}}</mat-icon>
+  </button>
   <button mat-icon-button class="blue-icon" aria-label="RightButton" (click)="headerService.rightBtnClick()">
     <mat-icon>{{headerService.rightIconName}}</mat-icon>
   </button>
