--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
@@ -9,15 +9,22 @@
       (sidenavToggle)="sidenav.toggle()"
     ></app-header-title>
 
+    <div class="search-section" [hidden]="!isSearchVisible">
+      <div class="search-input-wrapper">
+        <input type="text" [(ngModel)]="searchQuery" placeholder="Search sensors" (input)="onSearchInputChange()" />
+        <mat-icon matPrefix class="search-icon">search</mat-icon>
+      </div>
+    </div>
+
     <div class="filter-section" [hidden]="!isFilterVisible">
       <div class="filter-buttons">
         <span class="filter-label">Filtered by</span>
 
         <!-- Connection Status -->
-        <div  class="filter-button-group">
+        <div class="filter-button-group">
           <ng-container *ngFor="let option of filterOptions.connectionStatusOptions; let isFirst = first">
               <ng-container *ngIf="isFirst">
-                <h2 class="filterHeading">Connection Status:</h2>
+                <h2 class="filter-heading">Connection Status</h2>
               </ng-container>
               <button
                 class="filter-button"
@@ -26,15 +33,14 @@
               >
                 {{ option }}
               </button>
-
           </ng-container>
         </div>
 
         <!-- Field Location -->
-        <div  class="filter-button-group">
+        <div class="filter-button-group">
           <ng-container *ngFor="let option of filterOptions.fieldLocationOptions; let isFirst = first">
             <ng-container *ngIf="isFirst">
-              <h2 class="filterHeading">Field Location:</h2>
+              <h2 class="filter-heading">Field Location</h2>
             </ng-container>
             <button
               class="filter-button"
@@ -45,7 +51,6 @@
             </button>
           </ng-container>
           </div>
-
         <button
           class="clear-filters-button"
           (click)="clearFilter()"
@@ -74,7 +79,20 @@
     </mat-list>
 
     <ng-template #noItemsFound>
-      No sensors found.
+      <div class="no-sensors">
+        <mat-icon class="no-sensor-icon">sensors_off</mat-icon>
+
+        <div class="no-sensors-title">
+          No sensors detected
+        </div>
+
+        <div class="no-sensors-text">
+          <p>Check that wifi and bluetooth are enabled on your device and the sensors are turned on.</p>
+
+          <p>You may need to set up your gateways first. See the user manual for instructions.</p>
+        </div>
+      </div>
+
     </ng-template>
 
   </mat-sidenav-content>
