--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.scss
@@ -1,4 +1,3 @@
-
 .lastUpdatedTime {
   color: #8D8D8D;
   font-size: 10px !important;
@@ -47,12 +46,31 @@
 }
 
 
-.filter-section {
+.filter-section,
+.search-section {
   background-color: #F4F4F4;
   padding: 20px 16px;
   .mat-list-item {
     height: auto !important;
   }
+}
+
+.search-section {
+  input {
+    padding: 8px 26px 8px 8px;
+    font-size: 16px;
+    width: calc(100% - 32px);
+  }
+  .search-input-wrapper {
+    position: relative;
+  }
+  .mat-icon {
+    position: absolute;
+    top: 6px;
+    right: 0;
+    color: rgba(#262626, 0.5);
+  }
+
 }
 
 .filter-button {
@@ -65,6 +83,7 @@
   border-radius: 16px;
   padding: 7px 12px;
   margin-right: 8px;
+  margin-bottom: 12px;
   &.active {
     color: #2F4FFE;
     border: 1px solid #2F4FFE;
@@ -93,17 +112,48 @@
   margin-bottom: 10px;
 }
 
-.filterHeading {
+.filter-heading {
   color: #262626;
-  font-size: 15px;
+  font-size: 15px !important;
   font-weight: 500;
-  letter-spacing: 0.15px;
+  letter-spacing: 0.15px !important;
+  margin-bottom: 0px !important;
 }
 
 .filter-button-group {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .mat-list-item-content {
   width: 100%;
+}
+
+.no-sensors {
+  padding: 36px 16px;
+  text-align: center;
+  p {
+    margin-bottom: 25px;
+  }
+  .no-sensor-icon {
+    width: 48px;
+    height: 48px;
+    font-size: 48px;
+    color: #ABABAB;
+    display: block;
+    margin: 0 auto 6px;
+  }
+
+  .no-sensors-title {
+    color: #262626;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 15px;
+  }
+
+  .no-sensors-text {
+    color: #262626;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+  }
 }
