--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
@@ -74,7 +74,20 @@
     </mat-list>
 
     <ng-template #noItemsFound>
-      No sensors found.
+      <div class="no-sensors">
+        <mat-icon class="no-sensor-icon">sensors_off</mat-icon>
+
+        <div class="no-sensors-title">
+          No sensors detected
+        </div>
+
+        <div class="no-sensors-text">
+          <p>Check that wifi and bluetooth are enabled on your device and the sensors are turned on.</p>
+
+          <p>You may need to set up your gateways first. See the user manual for instructions.</p>
+        </div>
+      </div>
+
     </ng-template>
 
   </mat-sidenav-content>
