--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -1,5 +1,5 @@
-<!-- <app-header-title class="settings-header" fxFlexFill leftIconName="arrow_back" headerTitle="Settings" rightIconName="volume_up" (click)="onHeaderClick($event)">
-</app-header-title> -->
+<app-header-title class="settings-header" fxFlexFill (click)="onHeaderClick($event)">
+</app-header-title>
 
   <mat-list class="menu-list">
     <h3 class="menu-list-header" matSubheader>Account Settings</h3>
