--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.html
@@ -1,14 +1,3 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav mode="over">
-    <app-hamburger-menu (closeSidenav)="sidenav.close()"></app-hamburger-menu>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <app-header-title
-      class="header"
-      fxFlexFill
-      (sidenavToggle)="sidenav.toggle()"
-    ></app-header-title>
-
     <div class="search-section" [hidden]="!isSearchVisible">
       <div class="search-input-wrapper">
         <input type="text" [(ngModel)]="searchQuery" placeholder="Search sensors" (input)="onSearchInputChange()" />
@@ -18,13 +7,12 @@
 
     <div class="filter-section" [hidden]="!isFilterVisible">
       <div class="filter-buttons">
-        <span class="filter-label">Filtered by</span>
 
         <!-- Connection Status -->
         <div class="filter-button-group">
           <ng-container *ngFor="let option of filterOptions.connectionStatusOptions; let isFirst = first">
               <ng-container *ngIf="isFirst">
-                <h2 class="filter-heading">Connection Status</h2>
+                <h2 class="filter-heading">Status</h2>
               </ng-container>
               <button
                 class="filter-button"
@@ -50,7 +38,7 @@
               {{ option }}
             </button>
           </ng-container>
-          </div>
+        </div>
         <button
           class="clear-filters-button"
           (click)="clearFilter()"
@@ -61,39 +49,60 @@
       </div>
     </div>
 
-    <!-- Display the filtered and sorted items -->
-    <mat-list>
-      <ng-container *ngIf="displayedItems.length > 0; else noItemsFound">
-        <mat-list-item *ngFor="let item of displayedItems">
-          <a mat-list-item class="sensorLink" [ngClass]="{'offline': item.lastUpdated === 'Not Connected'}">
-            <h4 mat-line class="lastUpdatedTime">{{ item.lastUpdated }}</h4>
-            <p mat-line class="menu-list-body">
-              <span class="sensorInfo">
-                {{ item.sensorName }} <span class="sensorSpacer">&#183;</span> {{ item.fieldLocation }}
-              </span>
-              <span class="sensorMoisture">Moisture Level: {{ item.moistureLevel }}</span>
-            </p>
-          </a>
-        </mat-list-item>
-      </ng-container>
-    </mat-list>
-
-    <ng-template #noItemsFound>
-      <div class="no-sensors">
-        <mat-icon class="no-sensor-icon">sensors_off</mat-icon>
-
-        <div class="no-sensors-title">
-          No sensors detected
-        </div>
-
-        <div class="no-sensors-text">
-          <p>Check that wifi and bluetooth are enabled on your device and the sensors are turned on.</p>
-
-          <p>You may need to set up your gateways first. See the user manual for instructions.</p>
-        </div>
+    <div class="filteredby-section" [hidden]="!isFilteredByVisible">
+      <span class="filter-label">Filtered by</span>
+      <div class="filter-button-group">
+        <ng-container *ngFor="let option of selectedFilterOptions">
+          <button
+            class="filter-button"
+            (click)="toggleFilterOption(option)"
+            [class.active]="isSelectedFilterOption(option)"
+          >
+            {{ option }}
+          </button>
+        </ng-container>
       </div>
+      <button
+      class="clear-filters-button"
+      (click)="clearFilter()"
+      [class.active]="selectedFilterOptions.length === 0"
+    >
+      Clear Filter
+    </button>
+    </div>
 
-    </ng-template>
+    <!-- Display the filtered and sorted items -->
+    <div class="sensor-results" [hidden]="isFilterVisible">
+      <mat-list>
+        <ng-container *ngIf="displayedItems.length > 0; else noItemsFound">
+          <mat-list-item *ngFor="let item of displayedItems">
+            <a mat-list-item class="sensorLink" [ngClass]="{'offline': item.connectionStatus === 'Not Connected'}">
+              <h4 mat-line class="lastUpdatedTime">{{ item.lastUpdated }}</h4>
+              <p mat-line class="menu-list-body">
+                <span class="sensorInfo">
+                  {{ item.sensorName }} <span class="sensorSpacer">&#183;</span> {{ item.fieldLocation }}
+                </span>
+                <span class="sensorMoisture">Moisture Level: {{ item.moistureLevel }}</span>
+              </p>
+            </a>
+          </mat-list-item>
+        </ng-container>
+      </mat-list>
 
-  </mat-sidenav-content>
-</mat-sidenav-container>
+      <ng-template #noItemsFound>
+        <div class="no-sensors">
+          <mat-icon class="no-sensor-icon">sensors_off</mat-icon>
+
+          <div class="no-sensors-title">
+            No sensors detected
+          </div>
+
+          <div class="no-sensors-text">
+            <p>Check that wifi and bluetooth are enabled on your device and the sensors are turned on.</p>
+
+            <p>You may need to set up your gateways first. See the user manual for instructions.</p>
+          </div>
+        </div>
+
+      </ng-template>
+    </div>
