1.the ui of home tab in the dashboard 2.add past-reading record in the crop 3.add water date for the crop

--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
         <div class="container" fxLayout="row" fxFlexFill fxLayoutAlign="space-around center" >
           <button mat-flat-button routerLink="sensors" routerLinkActive="active-link" class="btn-color" >
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
-              <mat-icon  class="material-icons">sensors</mat-icon>
+              <mat-icon class="material-symbols-outlined">sensors</mat-icon>
               <span>Sensors</span>
             </div>
           </button>
@@ -22,7 +22,7 @@
           </button>
           <button mat-flat-button routerLink="fields" routerLinkActive="active-link" class="btn-color">
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
-              <mat-icon class="material-icons">compost</mat-icon>
+              <mat-icon class="material-symbols-outlined">psychiatry</mat-icon>
               <span>Field</span>
             </div>
           </button>
