Fix Bugs in Crop Advice and Headers

--- a/liquid-prep-app/src/app/components/advice/advice.component.html
+++ b/liquid-prep-app/src/app/components/advice/advice.component.html
@@ -1,4 +1,4 @@
-<app-header-title fxFlexFill leftIconName="arrow_back" headerTitle="Advice" rightIconName="volume_up" (click)="backClicked()">
+<app-header-title fxFlexFill (click)="onHeaderClick($event)">
 </app-header-title>
 
 <div class="crop-container" fxLayout="column"  fxLayoutAlign="space-evenly center">
