Add Field Button

--- a/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.scss
+++ b/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.scss
@@ -4,7 +4,8 @@
 
   .field-contents {
     display: flex;
-    height: 40px;
+    align-items: center;
+    height: 50px;
 
     .field-photo {
       border: 1px solid #ddd;
@@ -24,4 +25,10 @@
       color: gray;
     }
   }
+}
+
+.add-field-button {
+  position: fixed;
+  bottom: 250px;
+  right: 70px;
 }
