--- a/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.html
+++ b/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.html
@@ -1,15 +1,3 @@
-<!-- <mat-sidenav-container>
-  <mat-sidenav #sidenav mode="over">
-    <app-hamburger-menu (closeSidenav)="sidenav.close()"></app-hamburger-menu>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <app-header-title
-      class="header"
-      fxFlexFill
-      (sidenavToggle)="sidenav.toggle()"
-    ></app-header-title>
-  </mat-sidenav-content>
-</mat-sidenav-container> -->
 <app-header-title fxFlexFill> </app-header-title>
 <div class="fields-container">
   <div style="width: 100%">
@@ -26,3 +14,6 @@
     </mat-card>
   </div>
 </div>
+<button mat-fab color="primary" class="add-field-button" (click)="addField()">
+  <mat-icon>add</mat-icon>
+</button>
