--- a/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.scss
+++ b/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.scss
@@ -27,6 +27,13 @@
   }
 }
 
+.empty-fields-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
 .add-field-button {
   position: fixed;
   bottom: 250px;
