--- a/liquid-prep-app/src/app/components/fields-landing-page/details/details.component.html
+++ b/liquid-prep-app/src/app/components/fields-landing-page/details/details.component.html
@@ -36,3 +36,15 @@
     </mat-card-content>
   </mat-card>
 </div>
+<ng-template #warningDialog>
+  <div class="dialog-wrapper">
+    <h2>Delete Field?</h2>
+    <p>This will permanently delete this field from your list</p>
+  </div>
+  <div class="dialog-buttons">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button color="warn" (click)="deleteField()" mat-dialog-close>
+      DELETE
+    </button>
+  </div>
+</ng-template>
