--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -38,7 +38,11 @@ $liquid-prep-app-theme: mat-light-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+}
 
 .center {
   display: flex;
