--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensors.component.scss
@@ -1,3 +1,7 @@
+.sensors-landing-page span {
+  font-family: 'IBM Plex Sans' !important;
+}
+
 .lastUpdatedTime {
   color: #8D8D8D;
   font-size: 10px !important;
@@ -23,7 +27,7 @@
   border-left: solid 4px #FF2F2F;
 }
 
-.sensorInfo {
+.sensor-info {
   color: #262626;
   font-size: 16px;
   font-weight: 400;
@@ -32,19 +36,29 @@
 
 .sensorSpacer {
   font-size: 30px;
-  vertical-align: middle;
+  vertical-align: text-bottom;
+  margin-right: 4px;
 }
 
-.sensorMoisture,
-.sensorInfo {
+.sensor-moisture,
+.sensor-info {
   display: block;
+}
+
+.sensor-moisture {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.25px;
+}
+
+.no-field-selected {
+  font-style: italic;
 }
 
 .sensorBody {
   margin: 0;
   padding: 0;
 }
-
 
 .filter-section,
 .filteredby-section,
@@ -55,9 +69,15 @@
   }
 }
 
-.search-section,
+.sortedby-section {
+  padding: 11px 16px;
+}
+
+.filteredby-section,
+.sortedby-section,
 .search-section {
   background-color: #F4F4F4;
+  border-bottom: 1px solid #E0E0E0;
 }
 
 .search-section {
@@ -65,10 +85,11 @@
     padding: 8px 26px 8px 8px;
     font-size: 16px;
     width: calc(100% - 32px);
+    &.searchbox:focus-visible {
+      outline: 1px solid #0f62fe;
+    }
   }
-  .search-input-wrapper {
-    position: relative;
-  }
+
   .mat-icon {
     position: absolute;
     top: 6px;
@@ -121,6 +142,16 @@
   margin-bottom: 10px;
 }
 
+.sort-label {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.sort-option {
+  font-size: 14px;
+  font-weight: 400;
+}
+
 .filter-heading {
   color: #262626;
   font-size: 15px !important;
@@ -137,12 +168,11 @@
   width: 100%;
 }
 
-.no-sensors {
+.no-sensors,
+.no-results {
   padding: 36px 16px;
   text-align: center;
-  p {
-    margin-bottom: 25px;
-  }
+
   .no-sensor-icon {
     width: 48px;
     height: 48px;
@@ -164,6 +194,12 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
+  }
+}
+
+.no-sensors {
+  p {
+    margin-bottom: 25px;
   }
 }
 
