--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.html
@@ -1,9 +1,7 @@
 <app-header-title fxFlexFill></app-header-title>
 
-<!-- {{ sensor.name }} -->
-
 <div class="sensor-details">
-  <span class="sensor-name">A2</span>
+  <span class="sensor-name">{{ sensor.sensorName }}</span>
   <mat-card class="sensor-details-card">
     <mat-card-header>
       <mat-card-title class="sensor-detail-group-title">Location</mat-card-title>
@@ -13,13 +11,13 @@
       <mat-list>
         <mat-list-item class="sensor-detail-group">
           <span class="sensor-detail-label">Sensor gps location</span>
-          <span class="sensor-detail-value">41.40338, 2.17403</span>
+          <span class="sensor-detail-value">{{ sensor.geocode }}</span>
           <span class="sensor-detail-description emphasized">Set using device GPS</span>
         </mat-list-item>
 
         <mat-list-item>
           <span class="sensor-detail-label">Field</span>
-          <span class="sensor-detail-value">Southwest Field 1</span>
+          <span class="sensor-detail-value">{{ sensor.fieldLocation }}</span>
         </mat-list-item>
 
       </mat-list>
@@ -35,13 +33,13 @@
       <mat-list>
         <mat-list-item class="sensor-detail-group">
           <span class="sensor-detail-label">Last moisture reading</span>
-          <span class="sensor-detail-value">19.57</span>
-          <span class="sensor-detail-description">Today at 11:00 AM CDT</span>
+          <span class="sensor-detail-value">{{ sensor.moistureLevel }}</span>
+          <span class="sensor-detail-description">{{sensor.formattedLastUpdatedTime}}</span>
         </mat-list-item>
 
         <mat-list-item>
           <span class="sensor-detail-label">Next scheduled reading</span>
-          <span class="sensor-detail-value">Today at 2:00 PM CDT</span>
+          <span class="sensor-detail-value">{{sensor.formattedNextUpdatedTime}}</span>
 
           <p class="sensor-detail-description">Sensor interval is set at 3 readings a day beginning at 11:00 AM CDT,
             every 3 hours.</p>
@@ -56,21 +54,21 @@
       <span class="sensor-detail-label">Past Readings</span>
 
 
-      <table mat-table [dataSource]="pastReadingsData" class="past-readings-table">
+      <table mat-table [dataSource]="sensor.pastReadings" class="past-readings-table">
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef class="mat-header-cell"> Date </th>
-          <td mat-cell *matCellDef="let element"> {{ element.datetime | date:'M/d/yy' }} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.dateTime * 1000 | date:'M/d/yy' }} </td>
         </ng-container>
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef class="mat-header-cell"> Time </th>
-          <td mat-cell *matCellDef="let element"> {{ element.datetime | date:'h:mm a' }} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.dateTime * 1000 | date:'h:mm a' }} </td>
         </ng-container>
         <ng-container matColumnDef="moisturelevel">
           <th mat-header-cell *matHeaderCellDef class="mat-header-cell"> Moisture Level </th>
-          <td mat-cell *matCellDef="let element"> {{ element.moisturelevel | number:'1.2-2' }} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.moistureLevel | number:'1.2-2' }} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
       </table>
 
     </mat-card-content>
@@ -85,19 +83,19 @@
       <mat-list>
         <mat-list-item class="sensor-detail-group">
           <span class="sensor-detail-label">Edge Gateway</span>
-          <span class="sensor-detail-value">Farmer IP</span>
-          <span class="sensor-detail-description">http://192.168.86.40:3003</span>
+          <span class="sensor-detail-value">{{ sensor.connectionInfo.edgeGateway.value }}</span>
+          <span class="sensor-detail-description">{{ sensor.connectionInfo.edgeGateway.url }}</span>
         </mat-list-item>
 
         <mat-list-item class="sensor-detail-group">
           <span class="sensor-detail-label">esp-now Gateway</span>
-          <span class="sensor-detail-value">Farmer IP</span>
-          <span class="sensor-detail-description">http://192.168.86.40:3003</span>
+          <span class="sensor-detail-value">{{ sensor.connectionInfo.espNowGateway.value }}</span>
+          <span class="sensor-detail-description">{{ sensor.connectionInfo.espNowGateway.url }}</span>
         </mat-list-item>
 
         <mat-list-item class="sensor-detail-group">
           <span class="sensor-detail-label">Web socket</span>
-          <span class="sensor-detail-value">http://192.168.86.40:3003</span>
+          <span class="sensor-detail-value">{{ sensor.connectionInfo.webSocket.url }}</span>
         </mat-list-item>
 
       </mat-list>
