--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.scss
@@ -2,7 +2,9 @@
   padding: 0 5px;
 }
 
-.sensor-details {
+.sensor-details,
+.edit-details {
+  padding-bottom: 25px;
 
   .mat-list-base .mat-list-item {
     height: auto;
