--- a/liquid-prep-app/src/app/components/select-modal/select-modal.component.scss
+++ b/liquid-prep-app/src/app/components/select-modal/select-modal.component.scss
@@ -29,7 +29,7 @@
   text-transform: uppercase;
 }
 
-.sortOptions  {
+.selectOptions  {
   .mat-radio-container {
     height: 20px;
     width: 20px;
