Fields Landing Page Feature

--- a/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.html
+++ b/liquid-prep-app/src/app/components/fields-landing-page/fields-landing-page.component.html
@@ -14,7 +14,7 @@
     </mat-card>
   </div>
 </div>
-<div class="empty-fields-container" *ngIf="!fields">
+<div class="empty-fields-container" *ngIf="fields.length === 0">
   <div>
     <h2>It looks a little empty here</h2>
     <p>Add a field to beging using the app.</p>
