--- a/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors/sensor-details/sensor-details.component.html
@@ -17,7 +17,7 @@
 
         <mat-list-item>
           <span class="sensor-detail-label">Field</span>
-          <span class="sensor-detail-value">{{ sensor.fieldLocation }}</span>
+          <span class="sensor-detail-value">{{ selectedFieldName }}</span>
         </mat-list-item>
 
       </mat-list>
